# learning-user-safety

./: .gitignore  Dockerfile  README.md  build-server.sh
learning_safety_margin/: CMakeLists.txt  mosek.lic  package.xml  requirements.txt  setup.py
learning_safety_margin/csv/: 1_eePosition.txt  1_eeVelocity.txt  1_jointPositions.txt  2_eePosition.txt  2_eeVelocity.txt  3_eePosition.txt  3_eeVelocity.txt  4_eePosition.txt  4_eeVelocity.txt  4_jointPositions.txt
learning_safety_margin/data/: User Study Notes  User_Study_Notes
learning_safety_margin/data/MPC_tests/: notes
learning_safety_margin/data/User_0/: data_dict.p  vel_data_dict.p  vel_data_dict_old.p
learning_safety_margin/data/User_1/: vel_data_dict.p
learning_safety_margin/data/User_2/: vel_data_dict.p
learning_safety_margin/data/User_3/: vel_data_dict.p
learning_safety_margin/data/User_4/: vel_data_dict.p
learning_safety_margin/data/User_5/: vel_data_dict.p
learning_safety_margin/data/User_6/: vel_data_dict.p
learning_safety_margin/data/User_7/: vel_data_dict.p
learning_safety_margin/data/User_8/: vel_data_dict.p
learning_safety_margin/franka_env/: bag2csv.py  check_franka_data.ipynb  control_utils.py  franka_oa_cbf_learning.ipynb  franka_pos_cbfmpc_control.py  franka_pos_cbfrhc_control.py  franka_vel_cbfmpc_control.py  learning_cbf_acc.py  learning_cbf_vel.py  load_panda_grasp.py  panda_sim_grasp_controller.py  vel_control_utils.py  vel_lim_cbf_learning.ipynb
learning_safety_margin/launch/: demo.launch  mpc_control.launch
learning_safety_margin/msg/: mpcCommand.msg  mpcTraj.msg
learning_safety_margin/offline_plotting/: plot_jointState_from_replay.py  plot_planned_trajectories.py  plot_traj_from_csv.py  plot_user_data_comparisons.py  plot_vel_cbf.py
learning_safety_margin/plotting/: plot.py  plot_cartState_from_MPC.py  plot_jointState_from_replay.py
learning_safety_margin/process_data_and_learning/: bag2csv.py  check_traj_safety.py  get_obstacle_limits.py  get_statespace_limits.py  learning_cbf_manualtest.py  learning_cbf_pos_lim.py  learning_cbf_vel_lim.py  obs_cbf_control.py  plot_pos_cbf.py  plot_vel_cbf  plot_vel_cbf.py  proc_learn_plan_all.py  process_and_learn.py
learning_safety_margin/scripts/: MPC_velocity_control  MPC_velocity_planner  cartesian_impedance_MPC_control  cartesian_impedance_cbfvel_control  cartesian_space_single_traj_follow_control  cartesian_space_traj_follow_control  cartesian_twist_control  cartesian_twist_traj_follow_control  generate_cbf_trajectories  generate_cbf_trajectories.py  idle_control  joint_space_traj_replay_control  joint_space_velocity_control  joint_torque_control  joint_torque_one_traj_MPC_control  joint_torque_traj_follow_control  test_modulation_control  user_eval_joint_control  user_evaluation_control
(+166 files in other folders)
